# odoo-bringout-l10n_bs_hr_payroll

./: README.md  pyproject.toml
doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
